test/parser/should_fail/while2.souc.bad
main() = do
    while true explode
